@@ -4,6 +4,9 @@ The "#99999" numbers are Subversion revision numbers.
 Changes for xxx [2005-xx-xx] (current subversion)
 =================================================
 
+ o #13322 finalized dispatcherActive property (#13300)
+   Now it works on reconnect as well
+
  o #13319 Changed SOCKET timeout behaviour (Java/C/C++ clients)
    Changed to throw COMMUNICATION_TIMEOUT instead of RESOURCE_EXHAUST
    when the method call with SOCKET blocks after the specified timeout.
